--- a/src/test/java/test/config/TestData.properties
+++ b/src/test/java/test/config/TestData.properties
@@ -1,5 +1,7 @@
 url=https://demo.nopcommerce.com/
-browser=Chrome
+browser=edge
+SAUCE_USERNAME=oauth-nirav581122-f0839
+SAUCE_ACCESS_KEY=9c3542bc-ab65-4619-870e-f9a41e5e3e4b
 FirstName=test
 lastname=rem
 selectbydate=9
